# angel

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
frontend/: index.html  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CandidateCard.tsx  ClosedTradesPanel.tsx  DecisionsTable.tsx  DryrunCapital.tsx  GoLiveModal.tsx  Header.tsx  KillSwitchModal.tsx  OrdersTable.tsx  PaperTradesPanel.tsx  PositionsPanel.tsx  ScannerTable.tsx  SkipReasonsPanel.tsx  StatCard.tsx  StocksPanel.tsx  WatchlistPanel.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardLayout.tsx  DashboardPage.tsx  HistoryPage.tsx  LivePage.tsx  LoginPage.tsx  UniversePage.tsx
scripts/: dev.sh  start.sh  stop.sh
src/angel_bot/: __init__.py  broker_models.py  config.py  decisions.py  logging_config.py  main.py  market_hours.py  paper.py  ratelimit.py  runtime.py  smart_client.py
src/angel_bot/auth/: __init__.py  session.py
src/angel_bot/dashboard/: __init__.py  app.py
tests/: conftest.py  test_brain.py  test_candidate_filter.py  test_closed_today_source.py  test_exit_params.py  test_live_exits.py  test_llm_classifier.py  test_llm_filter.py  test_market_hours.py  test_master.py  test_orders_tracker.py  test_paper.py  test_position_pnl.py  test_rate_limit_classification.py  test_ratelimit.py  test_risk.py  test_risk_caps.py  test_risk_persistence.py  test_smart_client_auth.py  test_trailing.py  test_warmup_backfill.py  test_ws_binary.py
(+31 files in other folders)
